// Vitest Snapshot v1

exports[`render > table no fields 1`] = `
"<!--report-->
## 🏆 compared action

### case1

total: 150ms
total diff: +100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|timing|diff|
|----|----|----|
|a|10|-0|
|b|20|+10|
|c|30|+20|
|d|40|+30|
|e|50|+40|

</details>



### case2

total: 150ms
total diff: +100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|timing|diff|
|----|----|----|
|a|10|-0|
|b|20|+10|
|c|30|+20|
|d|40|+30|
|e|50|+40|

</details>

"
`;

exports[`render > table with fields 1`] = `
"<!--report-->
## 🏆 compared action

### case1

total: 150ms
total diff: +100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|fields|timing|diff|
|----|----|----|----|
|a|a|10|-0|
|b|b|20|+10|
|c|c|30|+20|
|d|d|40|+30|
|e|e|50|+40|

</details>



### case2

total: 150ms
total diff: +100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|fields|timing|diff|
|----|----|----|----|
|a|a|10|-0|
|b|b|20|+10|
|c|c|30|+20|
|d|d|40|+30|
|e|e|50|+40|

</details>

"
`;
